--- a/mymwebsite/templates/cases/followingremotejobs.html
+++ b/mymwebsite/templates/cases/followingremotejobs.html
@@ -4,6 +4,7 @@
 {% block title %}{% trans "Cases" %} - {{ block.super }}{% endblock %}
 {% block content %}
     <div class="mx-auto w-75" style="padding-top: 2rem; padding-bottom: 2rem;">
+        <h6 class="text-uppercase text-dark">{% trans "MyMensor Use Cases" %}</h6>
         <h1 class="pb-3">{% trans "Following Jobs Remotely" %}</h1>
         <img class="card-img-top img-fluid pb-3" src="{% static 'images/followingremotejobs.jpg' %}"
              alt={% trans "Staging for producing a fake photo." %}>
