--- a/mymwebsite/templates/cases/salperctrl.html
+++ b/mymwebsite/templates/cases/salperctrl.html
@@ -5,9 +5,9 @@
 {% block content %}
     <div class="mx-auto w-75" style="padding-top: 2rem; padding-bottom: 2rem;">
         <h6 class="text-uppercase text-dark">{% trans "MyMensor Use Cases" %}</h6>
-        <h1 class="pb-3">{% trans "Making Sure that a Photo is NOT a Fake" %}</h1>
-        <img class="card-img-top img-fluid pb-3" src="{% static 'images/genusemediaplan.jpg' %}"
-                 alt={% trans "Pinocchio sitting over a mobile phone." %}>
+        <h1 class="pb-3">{% trans "Simple control of Sales Force using Certified Routes" %}</h1>
+        <img class="card-img-top img-fluid pb-3" src="{% static 'images/salperctrl.jpg' %}"
+                 alt={% trans "Many different routes in a city." %}>
         <p>{% trans "Since we have created the first version of SeaMensor (that was the “father” of MyMensor), our friends ask us: - What can I do with this piece of software that I cannot do with my phone camera already?" %}</p>
         <p>{% trans "At that time, it seemed to be a good question, but as time passes it became abundantly clear that <mark>forgery in the online world has become epidemic.</mark> So, seeing a photo or video that was sent to you in the usual channels is not enough anymore, you need proof!" %}</p>
         <p>{% trans "One simple but defining feature of MyMensor is that <mark>you cannot insert any media into our system that was not produced by our mobile app.</mark> So, what you see in a video or photo coming from MyMensor was actually made by a smartphone camera, with no tampering, modification, enhancing, whatever, you name it." %}</p>
