--- a/mymwebsite/templates/cases/routestrademarketing.html
+++ b/mymwebsite/templates/cases/routestrademarketing.html
@@ -32,11 +32,19 @@
             </p>
         {% elif LANGUAGE_CODE == "pt-br" %}
             <h6 class="text-uppercase text-dark">{% trans "MyMensor Use Cases" %}</h6>
-            <h1 class="pb-3">Controle de Trade Marketing com Rotas Certificadas</h1>
-            <img class="card-img-top img-fluid pb-3" src="{% static 'images/salperctrl.jpg' %}"
-                 alt={% trans "Many different routes in a city." %}>
-            <p>Since we have created the first version of SeaMensor (that was the “father” of MyMensor), our friends ask
-                us: - What can I do with this piece of software that I cannot do with my phone camera already?</p>
+            <h1 class="pb-3">Controle Simples de Trade Marketing com Rotas Certificadas</h1>
+            <img class="card-img-top img-fluid pb-3" src="{% static 'images/trademarketing.jpg' %}"
+                 alt={% trans "Shopping cart in supermarket." %}>
+            <p>Controlar eficientemente a forma que o seu promotor de trade marketing se move pela cidade, sem ter que
+                preencher uma montanha de cadastros e sem mudar a sua forma de trabalhar. E, além disso, <mark>sem custos de implantação!</mark> Parece tentador, não?</p>
+            <p>Com o <strong>MyMensor</strong> você receberá as fotos que o seu promotor fará durante o trabalho de trade marketing de maneira automática, certificada e segura.</p>
+            <p>Usando a nossa <a href="https://app.mymensor.com">WebApp</a> você verá as rotas que o seu promotor fez,
+                como, por exemplo, uma imagem da gondola de um supermercado, assim que ela tenha sido feita e saberá a
+                localização exata!</p>
+            <p>Além disso as fotos ficam guardadas em nossos servidores na nuvem, sem risco de serem perdidas.</p>
+            <p>Verificar ações de merchandising no ponto de venda torna-se tarefa simples com a utilização do MyMensor.
+                O seu promotor poderá fazer fotos e mini vídeos da ação, sempre com certificação de horário e
+                localização.</p>
             <p>But that is just the tip of he iceberg! There is a lot more to MyMensor Media: automatic filing,
                 automatic sharing etc. So, look no further, <a id="registerbtn" class="registerbtn"
                                                                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">
@@ -49,11 +57,19 @@
             </p>
         {% else %}
             <h6 class="text-uppercase text-dark">{% trans "MyMensor Use Cases" %}</h6>
-            <h1 class="pb-3">{% trans "Simple control of Sales Force using Certified Routes" %}</h1>
-            <img class="card-img-top img-fluid pb-3" src="{% static 'images/salperctrl.jpg' %}"
-                 alt={% trans "Many different routes in a city." %}>
-            <p>Since we have created the first version of SeaMensor (that was the “father” of MyMensor), our friends ask
-                us: - What can I do with this piece of software that I cannot do with my phone camera already?</p>
+            <h1 class="pb-3">Controle Simples de Trade Marketing com Rotas Certificadas</h1>
+            <img class="card-img-top img-fluid pb-3" src="{% static 'images/trademarketing.jpg' %}"
+                 alt={% trans "Shopping cart in supermarket." %}>
+            <p>Controlar eficientemente a forma que o seu promotor de trade marketing se move pela cidade, sem ter que
+                preencher uma montanha de cadastros e sem mudar a sua forma de trabalhar. E, além disso, <mark>sem custos de implantação!</mark> Parece tentador, não?</p>
+            <p>Com o <strong>MyMensor</strong> você receberá as fotos que o seu promotor fará durante o trabalho de trade marketing de maneira automática, certificada e segura.</p>
+            <p>Usando a nossa <a href="https://app.mymensor.com">WebApp</a> você verá as rotas que o seu promotor fez,
+                como, por exemplo, uma imagem da gondola de um supermercado, assim que ela tenha sido feita e saberá a
+                localização exata!</p>
+            <p>Além disso as fotos ficam guardadas em nossos servidores na nuvem, sem risco de serem perdidas.</p>
+            <p>Verificar ações de merchandising no ponto de venda torna-se tarefa simples com a utilização do MyMensor.
+                O seu promotor poderá fazer fotos e mini vídeos da ação, sempre com certificação de horário e
+                localização.</p>
             <p>But that is just the tip of he iceberg! There is a lot more to MyMensor Media: automatic filing,
                 automatic sharing etc. So, look no further, <a id="registerbtn" class="registerbtn"
                                                                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">
