--- a/mymwebsite/templates/cases/routestrademarketing.html
+++ b/mymwebsite/templates/cases/routestrademarketing.html
@@ -20,12 +20,12 @@
             <p>Verificar ações de merchandising no ponto de venda torna-se tarefa simples com a utilização do MyMensor.
                 O seu promotor poderá fazer fotos e mini vídeos da ação, sempre com certificação de horário e
                 localização.</p>
-            <p>But that is just the tip of he iceberg! There is a lot more to MyMensor Media: automatic filing,
-                automatic sharing etc. So, look no further, <a id="registerbtn" class="registerbtn"
+            <p>Mas isto é só o começo! Há muito mais no Mymensor: arquivamento automático,
+                partilhamento automático etc. Então, não espere, <a id="registerbtn" class="registerbtn"
                                                                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">
-                    start your 30-day free-trial now! </a>
-                <mark>No Credit Card is required during trial period</mark>
-                and, even when you have subscribed, you can easily cancel at any time, just clicking a button!
+                    comece seu teste gratuito de 30 dias agora! </a>
+                <mark>Sem cartão de crédito durante o período de testes</mark>
+                e, mesmo depois que você assinar, você poderá cancelar a qualquer momento, com um único clique de botão!
             </p>
             <p><a href="{% url 'genusemediaplanhowto' %}"
                   class="text-primary">Liked the case? Click here to see how to do it using MyMensor!</a>
@@ -45,12 +45,12 @@
             <p>Verificar ações de merchandising no ponto de venda torna-se tarefa simples com a utilização do MyMensor.
                 O seu promotor poderá fazer fotos e mini vídeos da ação, sempre com certificação de horário e
                 localização.</p>
-            <p>But that is just the tip of he iceberg! There is a lot more to MyMensor Media: automatic filing,
-                automatic sharing etc. So, look no further, <a id="registerbtn" class="registerbtn"
+            <p>Mas isto é só o começo! Há muito mais no Mymensor: arquivamento automático,
+                compartilhamento automático etc. Então, não espere, <a id="registerbtn" class="registerbtn"
                                                                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">
-                    start your 30-day free-trial now! </a>
-                <mark>No Credit Card is required during trial period</mark>
-                and, even when you have subscribed, you can easily cancel at any time, just clicking a button!
+                    comece seu teste gratuito de 30 dias agora! </a>
+                <mark>Sem cartão de crédito durante o período de testes</mark>
+                e, mesmo depois que você assinar, você poderá cancelar a qualquer momento, com um único clique de botão!
             </p>
             <p><a href="{% url 'genusemediaplanhowto' %}"
                   class="text-primary">Liked the case? Click here to see how to do it using MyMensor!</a>
@@ -70,12 +70,12 @@
             <p>Verificar ações de merchandising no ponto de venda torna-se tarefa simples com a utilização do MyMensor.
                 O seu promotor poderá fazer fotos e mini vídeos da ação, sempre com certificação de horário e
                 localização.</p>
-            <p>But that is just the tip of he iceberg! There is a lot more to MyMensor Media: automatic filing,
-                automatic sharing etc. So, look no further, <a id="registerbtn" class="registerbtn"
+            <p>Mas isto é só o começo! Há muito mais no Mymensor: arquivamento automático,
+                compartilhamento automático etc. Então, não espere, <a id="registerbtn" class="registerbtn"
                                                                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">
-                    start your 30-day free-trial now! </a>
-                <mark>No Credit Card is required during trial period</mark>
-                and, even when you have subscribed, you can easily cancel at any time, just clicking a button!
+                    comece seu teste gratuito de 30 dias agora! </a>
+                <mark>Sem cartão de crédito durante o período de testes</mark>
+                e, mesmo depois que você assinar, você poderá cancelar a qualquer momento, com um único clique de botão!
             </p>
             <p><a href="{% url 'genusemediaplanhowto' %}"
                   class="text-primary">Liked the case? Click here to see how to do it using MyMensor!</a>
