--- a/mymwebsite/templates/cases/routestrademarketing.html
+++ b/mymwebsite/templates/cases/routestrademarketing.html
@@ -28,7 +28,7 @@
                 e, mesmo depois que você assinar, você poderá cancelar a qualquer momento, com um único clique de botão!
             </p>
             <p><a href="{% url 'genusemediaplanhowto' %}"
-                  class="text-primary">Liked the case? Click here to see how to do it using MyMensor!</a>
+                  class="text-primary">Gostou do Caso? Clique aqui para ver como fazer isto usando o MyMensor!</a>
             </p>
         {% elif LANGUAGE_CODE == "pt-br" %}
             <h6 class="text-uppercase text-dark">{% trans "MyMensor Use Cases" %}</h6>
@@ -53,7 +53,7 @@
                 e, mesmo depois que você assinar, você poderá cancelar a qualquer momento, com um único clique de botão!
             </p>
             <p><a href="{% url 'genusemediaplanhowto' %}"
-                  class="text-primary">Liked the case? Click here to see how to do it using MyMensor!</a>
+                  class="text-primary">Gostou do Caso? Clique aqui para ver como fazer isto usando o MyMensor!</a>
             </p>
         {% else %}
             <h6 class="text-uppercase text-dark">{% trans "MyMensor Use Cases" %}</h6>
@@ -78,7 +78,7 @@
                 e, mesmo depois que você assinar, você poderá cancelar a qualquer momento, com um único clique de botão!
             </p>
             <p><a href="{% url 'genusemediaplanhowto' %}"
-                  class="text-primary">Liked the case? Click here to see how to do it using MyMensor!</a>
+                  class="text-primary">Gostou do Caso? Clique aqui para ver como fazer isto usando o MyMensor!</a>
             </p>
         {% endif %}
 
