--- a/mymwebsite/templates/cases.html
+++ b/mymwebsite/templates/cases.html
@@ -30,6 +30,14 @@
                 <p class="card-text">{% trans "Do like all big tech corporations are doing. They are using <u>your</u> data for <u>their</u> benefit, and most of the time we cannot prevent that. <mark>But we can use our own data for our own benefit, can't we?</mark>. " %}</p>
             </div>
         </div>
+        <div id="routestrademarketing" class="card m-3 card-outline-secondary" style="width: 22rem;">
+            <img class="card-img-top img-fluid" src="{% static 'images/trademarketing.jpg' %}"
+                 alt={% trans "Shopping cart in supermarket." %}>
+            <div class="card-body p-3">
+                <h4 class="card-title">{% trans "Simple Trade Marketing Control with Certified Routes" %}</h4>
+                <p class="card-text">{% trans "Control efficiently the way your trade marketing promoter moves around the city, make remotely checking merchandising actions at the point of sale a simple task." %}</p>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
