--- a/mymwebsite/templates/howto/routestrademarketing.html
+++ b/mymwebsite/templates/howto/routestrademarketing.html
@@ -27,7 +27,7 @@
         <p>{% trans "By using MyMensor, even with the Media only plan, you will be able to control your Trade Marketing promoters trusting that the media you receive is genuine and was not modified. The location and time certification coupled with the ability to <mark>extend your capturing powers to remote users</mark> gives you a tremendous power to survey activities in different locations with <mark>great confidence.</mark>" %}</p>
         <p>{% trans "Please keep in mind that it is the <mark>simplest possible way of doing this with MyMensor.</mark>" %}</p>
         <p>{% trans "You could click " %}<a
-                href="{% trans "mailto:contact@mymensor.com?subject=MyMensorCorp Quote Request&body=Please contact me in order to start discussing a custom MyMensorCorp for my Organization. Thanks!" %}"
+                href="{% trans "mailto:contact@mymensor.com?subject=MyMensor CUSTOM Quote Request&body=Please contact me in order to start discussing a custom MyMensor for my Organization. Thanks!" %}"
                 role="button">{% trans "here to send us an email asking for a MyMensor CUSTOM." %}</a>{% trans " and we will build one taylor made to your organization!" %}
         </p>
         <p>{% trans "In anyway, " %}<a id="registerbtn"
