--- a/mymwebsite/templates/howto.html
+++ b/mymwebsite/templates/howto.html
@@ -24,10 +24,18 @@
         </div>
         <div id="usingyourowndata" class="card m-3 card-outline-secondary" style="width: 22rem;">
             <img class="card-img-top img-fluid" src="{% static 'images/usingyourowndata.jpg' %}"
-                 alt={% trans "Staging for producing a fake photo." %}>
+                 alt={% trans "Man surfing the bigdata wave, in form of a dollar sign." %}>
             <div class="card-body p-3">
                 <h4 class="card-title">{% trans "Using <u>Your</u> Own Data for <u>Your</u> Own Benefit " %}</h4>
                 <p class="card-text">{% trans "How can <u>I do that?</u> Find here a detailed guide on how MyMensor will build that for <u>YOU</u>. " %}</p>
+            </div>
+        </div>
+        <div id="routestrademarketing" class="card m-3 card-outline-secondary" style="width: 22rem;">
+            <img class="card-img-top img-fluid" src="{% static 'images/trademarketing.jpg' %}"
+                 alt={% trans "Shopping cart in supermarket." %}>
+            <div class="card-body p-3">
+                <h4 class="card-title">{% trans "Simple Trade Marketing Control with Certified Routes" %}</h4>
+                <p class="card-text">{% trans "MyMensor will empower you to accomplish that! Follow our step by step how-to guide." %}</p>
             </div>
         </div>
     </div>
@@ -41,7 +49,7 @@
             event.preventDefault();
             var idclicked = $(this).attr('id');
             console.log("Clicked on: id=" + idclicked);
-            window.location = '/{{ LANGUAGE_CODE }}/howto/'+idclicked;
+            window.location = '/{{ LANGUAGE_CODE }}/howto/' + idclicked;
         });
 
 
